// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo config-manager pulls "frodo config-manager pull authentication -D testDir2": should export the authentication in fr-config-manager style" 1`] = `0`;

exports[`frodo config-manager pulls "frodo config-manager pull authentication -D testDir2": should export the authentication in fr-config-manager style" 2`] = `""`;

exports[`frodo config-manager pulls "frodo config-manager pull authentication -D testDir2": should export the authentication in fr-config-manager style": testDir2/realms/alpha/realm-config/authentication.json 1`] = `
{
  "_id": "",
  "_rev": "-1952817720",
  "_type": {
    "_id": "EMPTY",
    "collection": false,
    "name": "Core",
  },
  "accountlockout": {
    "lockoutDuration": 0,
    "lockoutDurationMultiplier": 1,
    "lockoutWarnUserCount": 0,
    "loginFailureCount": 5,
    "loginFailureDuration": 300,
    "loginFailureLockoutMode": false,
    "storeInvalidAttemptsInDataStore": true,
  },
  "core": {
    "adminAuthModule": "Login",
    "orgConfig": "Login",
  },
  "general": {
    "defaultAuthLevel": 0,
    "externalLoginPageUrl": "https://volker-demo.encore.forgerock.com/demo/webapp/en/home/redirect",
    "identityType": [
      "agent",
      "user",
    ],
    "locale": "en_US",
    "statelessSessionsEnabled": false,
    "twoFactorRequired": false,
    "userStatusCallbackPlugins": [],
  },
  "postauthprocess": {
    "loginFailureUrl": [],
    "loginPostProcessClass": [],
    "loginSuccessUrl": [
      "/enduser/?realm=/alpha",
    ],
    "userAttributeSessionMapping": [],
    "usernameGeneratorClass": "com.sun.identity.authentication.spi.DefaultUserIDGenerator",
    "usernameGeneratorEnabled": true,
  },
  "security": {
    "addClearSiteDataHeader": true,
    "keyAlias": "test",
    "moduleBasedAuthEnabled": false,
    "sharedSecret": {
      "$string": "&{am.authentication.shared.secret}",
    },
    "zeroPageLoginAllowedWithoutReferrer": true,
    "zeroPageLoginEnabled": false,
    "zeroPageLoginReferrerWhiteList": [],
  },
  "trees": {
    "authenticationSessionsMaxDuration": 5,
    "authenticationSessionsStateManagement": "JWT",
    "authenticationSessionsWhitelist": false,
    "authenticationTreeCookieHttpOnly": true,
    "suspendedAuthenticationTimeout": 1440,
  },
  "userprofile": {
    "aliasAttributeName": [
      "uid",
    ],
    "defaultRole": [],
    "dynamicProfileCreation": "false",
  },
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull authentication -D testDir2": should export the authentication in fr-config-manager style": testDir2/realms/bravo/realm-config/authentication.json 1`] = `
{
  "_id": "",
  "_rev": "-861746544",
  "_type": {
    "_id": "EMPTY",
    "collection": false,
    "name": "Core",
  },
  "accountlockout": {
    "lockoutDuration": 0,
    "lockoutDurationMultiplier": 1,
    "lockoutWarnUserCount": 0,
    "loginFailureCount": 5,
    "loginFailureDuration": 300,
    "loginFailureLockoutMode": false,
    "storeInvalidAttemptsInDataStore": true,
  },
  "core": {
    "adminAuthModule": "Login",
    "orgConfig": "Login",
  },
  "general": {
    "defaultAuthLevel": 0,
    "identityType": [
      "agent",
      "user",
    ],
    "locale": "en_US",
    "statelessSessionsEnabled": false,
    "twoFactorRequired": false,
    "userStatusCallbackPlugins": [],
  },
  "postauthprocess": {
    "loginFailureUrl": [],
    "loginPostProcessClass": [],
    "loginSuccessUrl": [
      "/enduser/?realm=/bravo",
    ],
    "userAttributeSessionMapping": [],
    "usernameGeneratorClass": "com.sun.identity.authentication.spi.DefaultUserIDGenerator",
    "usernameGeneratorEnabled": true,
  },
  "security": {
    "addClearSiteDataHeader": true,
    "keyAlias": "test",
    "moduleBasedAuthEnabled": false,
    "sharedSecret": {
      "$string": "&{am.authentication.shared.secret}",
    },
    "zeroPageLoginAllowedWithoutReferrer": true,
    "zeroPageLoginEnabled": false,
    "zeroPageLoginReferrerWhiteList": [],
  },
  "trees": {
    "authenticationSessionsMaxDuration": 15,
    "authenticationSessionsStateManagement": "JWT",
    "authenticationSessionsWhitelist": false,
    "authenticationTreeCookieHttpOnly": true,
    "suspendedAuthenticationTimeout": 1440,
  },
  "userprofile": {
    "aliasAttributeName": [
      "uid",
    ],
    "defaultRole": [],
    "dynamicProfileCreation": "false",
  },
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull authentication -D testDir3 -r bravo": should export the authentication in bravo realm in fr-config-manager style" 1`] = `0`;

exports[`frodo config-manager pulls "frodo config-manager pull authentication -D testDir3 -r bravo": should export the authentication in bravo realm in fr-config-manager style" 2`] = `""`;

exports[`frodo config-manager pulls "frodo config-manager pull authentication -D testDir3 -r bravo": should export the authentication in bravo realm in fr-config-manager style": testDir3/realms/bravo/realm-config/authentication.json 1`] = `
{
  "_id": "",
  "_rev": "-861746544",
  "_type": {
    "_id": "EMPTY",
    "collection": false,
    "name": "Core",
  },
  "accountlockout": {
    "lockoutDuration": 0,
    "lockoutDurationMultiplier": 1,
    "lockoutWarnUserCount": 0,
    "loginFailureCount": 5,
    "loginFailureDuration": 300,
    "loginFailureLockoutMode": false,
    "storeInvalidAttemptsInDataStore": true,
  },
  "core": {
    "adminAuthModule": "Login",
    "orgConfig": "Login",
  },
  "general": {
    "defaultAuthLevel": 0,
    "identityType": [
      "agent",
      "user",
    ],
    "locale": "en_US",
    "statelessSessionsEnabled": false,
    "twoFactorRequired": false,
    "userStatusCallbackPlugins": [],
  },
  "postauthprocess": {
    "loginFailureUrl": [],
    "loginPostProcessClass": [],
    "loginSuccessUrl": [
      "/enduser/?realm=/bravo",
    ],
    "userAttributeSessionMapping": [],
    "usernameGeneratorClass": "com.sun.identity.authentication.spi.DefaultUserIDGenerator",
    "usernameGeneratorEnabled": true,
  },
  "security": {
    "addClearSiteDataHeader": true,
    "keyAlias": "test",
    "moduleBasedAuthEnabled": false,
    "sharedSecret": {
      "$string": "&{am.authentication.shared.secret}",
    },
    "zeroPageLoginAllowedWithoutReferrer": true,
    "zeroPageLoginEnabled": false,
    "zeroPageLoginReferrerWhiteList": [],
  },
  "trees": {
    "authenticationSessionsMaxDuration": 15,
    "authenticationSessionsStateManagement": "JWT",
    "authenticationSessionsWhitelist": false,
    "authenticationTreeCookieHttpOnly": true,
    "suspendedAuthenticationTimeout": 1440,
  },
  "userprofile": {
    "aliasAttributeName": [
      "uid",
    ],
    "defaultRole": [],
    "dynamicProfileCreation": "false",
  },
}
`;
